Pagina about me + modificari

--- a/about.html
+++ b/about.html
@@ -1,3 +1,112 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Me.</title>
+        <link href="./css/about.css" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="wrapper">
+            <header class="header">
+                <div class="custom-shape-divider-top-1746567817">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                        <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                        <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                        <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                    </svg>
+                </div>
+                <p>Anton Ana-Maria</p>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section class="bio">
+                    <img src="./images/me.jpg" alt="Ana-Maria Anton" class="profile-pic">
+                    <div class="bio-text">
+                        <h1>Ana-Maria Anton</h1>
+                        <p>Hi! I'm Ana! I am currently transitioning into a new career in tech.
+                            I have worked previously as a vet and I am now an aspiring software engineer.
+                            Whilst working in the field, encountering various different challenges,
+                            I have discovered my passion for technology and programming, which inspired me to
+                            want to put my creativity and problem-solving skills to use in order to solve real-world problems.<br>
+                            I started working on some personal projects in order to learn and better myself on this new journey.
+                        </p>
+                    </div>
+                </section>
+                <div class="info-container">
+                    <section class="education-grid">
+                        <h2>Education</h2>
+                        <div class="education-item">
+                            <p>University of Agronomic Sciences and Veterinary Medicine of Bucharest</p>
+                            <p>Faculty of Veterinary Medicine - Doctor of Veterinary Medicine(2015-2021)</p>
+                        </div>
+                        <h2>Certifications</h2>
+                        <div class="education-item">
+                            <p>
+                                <a href="https://www.credly.com/badges/eb0e1bb1-a76f-4253-87b2-d6e0bcb5af54/public_url" target="_blank" rel="noopener noreferrer">
+                                PCAP™ – Certified Associate Python Programmer(2024)
+                                </a>
+                            </p>
+                            <p>
+                                <a href="https://www.credly.com/badges/682fba9c-784b-487c-9d94-579ba644b355/public_url" target="_blank" rel="noopener noreferrer">
+                                    LFCS: Linux Foundation Certified Systems Administrator(2024)
+                                </a>
+                            </p>
+                            <p>
+                                <a href="https://www.credly.com/badges/0f7861bb-23fe-4c3a-9928-9fe7154f0f97/public_url" target="_blank" rel="noopener noreferrer">
+                                PCPP1™ – Certified Professional Python Programmer Level 1(2025)
+                                </a>
+                            </p>
+                        </div>
+                    </section>
+                    <section class="interests-grid-item">
+                        <h2>Other Interests</h2>
+                        <ul class="interests">
+                            <li>playing videogames</li>
+                            <li>watching and reviewing movies</li>
+                            <li>traveling</li>
+                            <li>playing board games</li>
+                            <li>reading</li>
+                            <li>listening to music</li>
+                            <li>spending time with my friends</li>
+                        </ul>
+                    </section>
+                    <section class="language-grid-item">
+                        <h2>Language proficency</h2>
+                        <ul class="language">
+                            <li>English - fluent</li>
+                            <li>French conversational</li>
+                            <li>Romanian - native</li>
+                            <li>Korean - a little bit</li>
+                        </ul>
+                    </section>
+                </div>
+                <section class="socials">
+                    <h3>Connect with me:</h3>
+                    <a href="https://www.instagram.com/anaantonn" target="_blank" aria-label="Instagram" rel="noopener noreferrer">
+                        <img src="./images/instagram-svgrepo-com.svg" alt="Instagram">
+                    </a>
+                    <a href="https://github.com/anaantonn" target="_blank" aria-label="GitHub" rel="noopener noreferrer">
+                        <img src="./images/github-142-svgrepo-com.svg" alt="GitHub">
+                    </a>
+                    <a href="https://www.linkedin.com/in/anton-ana-maria-9b986b211" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer">
+                        <img src="./images/linkedin-svgrepo-com.svg" alt="LinkedIn">
+                    </a>
+                    <a href="mailto:anamaria.anton1311@gmail.com" target="_blank" aria-label="E-mail" rel="noopener noreferrer">
+                        <img src="./images/email-8-svgrepo-com.svg" alt="E-mail">
+                    </a>
+                </section>
+            </main>
+            <footer>
+                <p>©2025 Ana-Maria Anton</p>
+            </footer>
+        </div>
+    </body>
 </html>
