--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me.</title>
         <link href="./css/about.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -17,21 +18,21 @@
                         <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
                     </svg>
                 </div>
-                <p>Anton Ana-Maria</p>
+                <p data-aos="zoom-in" data-aos-duration="1000">Anton Ana-Maria</p>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="resume.html">Resume</a></li>
-                        <li><a href="projects.html">Projects</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100"><a href="index.html">Home</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200"><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300"><a href="projects.html">Projects</a></li>
                     </ul>
                 </nav>
             </header>
             <main>
                 <section class="bio">
-                    <img src="./images/me.jpg" alt="Ana-Maria Anton" class="profile-pic">
+                    <img src="./images/me.jpg" alt="Ana-Maria Anton" class="profile-pic" data-aos="zoom-in-right" data-aos-duration="2000"/>
                     <div class="bio-text">
-                        <h1>Ana-Maria Anton</h1>
-                        <p>Hi! I'm Ana! I am currently transitioning into a new career in tech.
+                        <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">Ana-Maria Anton</h1>
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">Hi! I'm Ana! I am currently transitioning into a new career in tech.
                             I have worked previously as a vet and I am now an aspiring software engineer.
                             Whilst working in the field, encountering various different challenges,
                             I have discovered my passion for technology and programming, which inspired me to
@@ -41,7 +42,7 @@
                     </div>
                 </section>
                 <div class="info-container">
-                    <section class="education-grid">
+                    <section class="education-grid" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="500">
                         <h2>Education</h2>
                         <div class="education-item">
                             <p>University of Agronomic Sciences and Veterinary Medicine of Bucharest</p>
@@ -66,7 +67,7 @@
                             </p>
                         </div>
                     </section>
-                    <section class="interests-grid-item">
+                    <section class="interests-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="500">
                         <h2>Other Interests</h2>
                         <ul class="interests">
                             <li>playing videogames</li>
@@ -78,28 +79,28 @@
                             <li>spending time with my friends</li>
                         </ul>
                     </section>
-                    <section class="language-grid-item">
+                    <section class="language-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="500">
                         <h2>Language proficency</h2>
                         <ul class="language">
                             <li>English - fluent</li>
-                            <li>French conversational</li>
+                            <li>French - conversational</li>
                             <li>Romanian - native</li>
                             <li>Korean - a little bit</li>
                         </ul>
                     </section>
                 </div>
                 <section class="socials">
-                    <h3>Connect with me:</h3>
-                    <a href="https://www.instagram.com/anaantonn" target="_blank" aria-label="Instagram" rel="noopener noreferrer">
+                    <h3 data-aos="zoom-in-up" data-aos-easing="ease-out-back" data-aos-delay="600">Connect with me:</h3>
+                    <a href="https://www.instagram.com/anaantonn" target="_blank" aria-label="Instagram" rel="noopener noreferrer" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="700">
                         <img src="./images/instagram-svgrepo-com.svg" alt="Instagram">
                     </a>
-                    <a href="https://github.com/anaantonn" target="_blank" aria-label="GitHub" rel="noopener noreferrer">
+                    <a href="https://github.com/anaantonn" target="_blank" aria-label="GitHub" rel="noopener noreferrer" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="800">
                         <img src="./images/github-142-svgrepo-com.svg" alt="GitHub">
                     </a>
-                    <a href="https://www.linkedin.com/in/anton-ana-maria-9b986b211" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/in/anton-ana-maria-9b986b211" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="900">
                         <img src="./images/linkedin-svgrepo-com.svg" alt="LinkedIn">
                     </a>
-                    <a href="mailto:anamaria.anton1311@gmail.com" target="_blank" aria-label="E-mail" rel="noopener noreferrer">
+                    <a href="mailto:anamaria.anton1311@gmail.com" target="_blank" aria-label="E-mail" rel="noopener noreferrer" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="1000">
                         <img src="./images/email-8-svgrepo-com.svg" alt="E-mail">
                     </a>
                 </section>
@@ -108,5 +109,9 @@
                 <p>©2025 Ana-Maria Anton</p>
             </footer>
         </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
