--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav>
                     <ul>
                         <li><a href="about.html">About Me</a></li>
-                        <li><a href="resume.html">Resume</a></li>
+                        <li><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
                 </nav>
