--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,8 @@
                                             <h2>Managing Store Inventory</h2>
                                         </div>
                                         <div class="card__body">
-                                            <p>Simple project meant to familiarize myself and better understand the concept of arrays in a fun way.</p>
+                                            <p>Simple project meant to familiarize myself and better understand the concept of arrays in a fun way.<br>
+                                            Upon running the program, users are prompted to search, sort or calculate the total price of selected products.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -129,7 +130,8 @@
                                             <h2>Mini Target Practice Game</h2>
                                         </div>
                                         <div class="card__body">
-                                            <p>A simple game built with Pygame, where the player can practice their aim by shooting targets appearing on screen.</p>
+                                            <p>A simple game built with Pygame, where the player can practice their aim by shooting targets appearing on screen.<br>
+                                            Inspired by classic practice ranges in video games, this project helped me practice various programming concepts in a fun and engaging way.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -148,7 +150,8 @@
                                             <h2>My Gaming Diary(WIP)</h2>
                                         </div>
                                         <div class="card__body">
-                                            <p>Gaming Diary's dreams and aspirations are to keep a detailed track of Steam games you've played.</p>
+                                            <p>Gaming Diary's dreams and aspirations are to keep a detailed track of Steam games you've played.<br>
+                                            My passion for gaming and wanting to keep a detailed track of gaming sessions, inspired me to create a diary which does just that for you. </p>
                                         </div>
                                     </div>
                                 </div>
@@ -169,13 +172,19 @@
                                             <h2>ATM Application</h2>
                                         </div>
                                         <div class="card__body">
-                                            <p>A PHP version of the C++ "ATM Application"</p>
+                                            <p>A PHP version of the C++ "ATM Application"<br>
+                                            This project allowed me to explore web development using PHP and PostgreSQL, recreating the "ATM Application" and giving it a web-based interface.</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
+                </section>
+                <section class="github">
+                    <a href="https://github.com/anaantonn" target="_blank" rel="noopener noreferrer">
+                        <h3 data-aos="zoom-in-up" data-aos-easing="ease-out-back">See more on GitHub</h3>
+                    </a>
                 </section>
             </main>
             <footer>
