--- a/about.html
+++ b/about.html
@@ -20,10 +20,24 @@
                 </div>
                 <p data-aos="zoom-in" data-aos-duration="1000">Anton Ana-Maria</p>
                 <nav>
+                    <label class="switch" for="switch" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100">
+                        <input type="checkbox" id="switch" />
+                        <div class="sunmoon">
+                          <div class="darkside"></div>
+                        </div>
+                        <div class="border"></div>
+                        <div class="clouds">
+                          <img src="images/cloud_1.svg" alt="" class="cloud cloud-1" />
+                          <img src="images/cloud_2.svg" alt="" class="cloud cloud-2" />
+                          <img src="images/cloud_3.svg" alt="" class="cloud cloud-3" />
+                          <img src="images/cloud_4.svg" alt="" class="cloud cloud-4" />
+                          <img src="images/stars.svg" alt="" class="stars" />
+                        </div>
+                    </label>
                     <ul>
-                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100"><a href="index.html">Home</a></li>
-                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200"><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
-                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300"><a href="projects.html">Projects</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200"><a href="index.html">Home</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300"><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400"><a href="projects.html">Projects</a></li>
                     </ul>
                 </nav>
             </header>
@@ -31,8 +45,8 @@
                 <section class="bio">
                     <img src="./images/me.jpg" alt="Ana-Maria Anton" class="profile-pic" data-aos="zoom-in-right" data-aos-duration="2000"/>
                     <div class="bio-text">
-                        <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">Ana-Maria Anton</h1>
-                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">Hi! I'm Ana! I am currently transitioning into a new career in tech.
+                        <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">Ana-Maria Anton</h1>
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">Hi! I'm Ana! I am currently transitioning into a new career in tech.
                             I have worked previously as a vet and I am now an aspiring software engineer.
                             Whilst working in the field, encountering various different challenges,
                             I have discovered my passion for technology and programming, which inspired me to
@@ -42,7 +56,7 @@
                     </div>
                 </section>
                 <div class="info-container">
-                    <section class="education-grid" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="500">
+                    <section class="education-grid" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="700">
                         <h2>Education</h2>
                         <div class="education-item">
                             <p>University of Agronomic Sciences and Veterinary Medicine of Bucharest</p>
@@ -67,7 +81,7 @@
                             </p>
                         </div>
                     </section>
-                    <section class="interests-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="500">
+                    <section class="interests-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="800">
                         <h2>Other Interests</h2>
                         <ul class="interests">
                             <li>playing videogames</li>
@@ -79,7 +93,7 @@
                             <li>spending time with my friends</li>
                         </ul>
                     </section>
-                    <section class="language-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="500">
+                    <section class="language-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="900">
                         <h2>Language proficency</h2>
                         <ul class="language">
                             <li>English - fluent</li>
@@ -90,7 +104,7 @@
                     </section>
                 </div>
                 <section class="socials">
-                    <h3 data-aos="zoom-in-up" data-aos-easing="ease-out-back" data-aos-delay="600">Connect with me:</h3>
+                    <h3 data-aos="zoom-in-up" data-aos-easing="ease-out-back" data-aos-delay="1000">Connect with me:</h3>
                     <a href="https://www.instagram.com/anaantonn" target="_blank" aria-label="Instagram" rel="noopener noreferrer" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="700">
                         <img src="./images/instagram-svgrepo-com.svg" alt="Instagram">
                     </a>
@@ -110,6 +124,7 @@
             </footer>
         </div>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script src="js/toggle_button.js"></script>
         <script>
             AOS.init();
         </script>
