--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
                 </div>
                 <p>Anton Ana-Maria</p>
                 <nav>
+                    <label class="switch" for="switch">
+                        <input type="checkbox" id="switch" />
+                        <div class="sunmoon">
+                          <div class="darkside"></div>
+                        </div>
+                        <div class="border"></div>
+                        <div class="clouds">
+                          <img src="images/cloud_1.svg" alt="" class="cloud cloud-1" />
+                          <img src="images/cloud_2.svg" alt="" class="cloud cloud-2" />
+                          <img src="images/cloud_3.svg" alt="" class="cloud cloud-3" />
+                          <img src="images/cloud_4.svg" alt="" class="cloud cloud-4" />
+                          <img src="images/stars.svg" alt="" class="stars" />
+                        </div>
+                    </label>
                     <ul>
                         <li><a href="about.html">About Me</a></li>
                         <li><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
@@ -55,5 +69,6 @@
                 <p>©2025 Ana-Maria Anton</p>
             </footer>
         </div>
+        <script src="js/toggle_button.js"></script>
     </body>
 </html>
