--- a/projects.html
+++ b/projects.html
@@ -20,23 +20,37 @@
                 </div>
                 <p data-aos="zoom-in" data-aos-duration="1000">Anton Ana-Maria</p>
                 <nav>
+                    <label class="switch" for="switch" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100">
+                        <input type="checkbox" id="switch" />
+                        <div class="sunmoon">
+                          <div class="darkside"></div>
+                        </div>
+                        <div class="border"></div>
+                        <div class="clouds">
+                          <img src="images/cloud_1.svg" alt="" class="cloud cloud-1" />
+                          <img src="images/cloud_2.svg" alt="" class="cloud cloud-2" />
+                          <img src="images/cloud_3.svg" alt="" class="cloud cloud-3" />
+                          <img src="images/cloud_4.svg" alt="" class="cloud cloud-4" />
+                          <img src="images/stars.svg" alt="" class="stars" />
+                        </div>
+                    </label>
                     <ul>
-                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="100"><a href="index.html">Home</a></li>
-                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200"><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
-                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300"><a href="about.html">About</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200"><a href="index.html">Home</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300"><a href="resume.html" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400"><a href="about.html">About Me</a></li>
                     </ul>
                 </nav>
             </header>
             <main>
                 <section class="description">
-                    <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400">My personal projects...</h1>
-                    <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">Here you can find some of the projects that I have worked on.
-                            These projects have helped me learn and improve while also allowing me to explore my creativity.
+                    <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">My personal projects...</h1>
+                    <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">Here you can find some of the projects that I have worked on.
+                            These projects have helped me learn and improve while also boosting my creativity.
                             I am excited to continue building and expanding my portfolio as new ideas come to mind in the future!
                     </p>
                 </section>
                 <section class="projects">
-                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="600">
+                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="700">
                         <a href="https://github.com/anaantonn/ATM.git" target="_blank" rel="noopener noreferrer">
                             <div class="card__inner">
                                 <div class="card__face card__face--front">
@@ -56,7 +70,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="700">
+                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="800">
                         <a href="https://github.com/anaantonn/Tema-Ferma-Animale.git" target="_blank" rel="noopener noreferrer">
                             <div class="card__inner">
                                 <div class="card__face card__face--front">
@@ -76,7 +90,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="800">
+                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="900">
                         <a href="https://github.com/anaantonn/Products-Task.git" target="_blank" rel="noopener noreferrer">
                             <div class="card__inner">
                                 <div class="card__face card__face--front">
@@ -98,7 +112,7 @@
                     </div>
                 </section>
                 <section class="projects">
-                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="900">
+                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="1000">
                         <a href="https://github.com/anaantonn/Proiect-Vet.git" target="_blank" rel="noopener noreferrer">
                             <div class="card__inner">
                                 <div class="card__face card__face--front">
@@ -118,7 +132,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="1000">
+                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="1100">
                         <a href="https://github.com/anaantonn/Target-Practice.git" target="_blank" rel="noopener noreferrer">
                             <div class="card__inner">
                                 <div class="card__face card__face--front">
@@ -138,7 +152,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="1100">
+                    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-out-back" data-aos-delay="1200">
                         <a href="https://github.com/anaantonn/My-Gaming-Diary.git" target="_blank" rel="noopener noreferrer">
                             <div class="card__inner">
                                 <div class="card__face card__face--front">
@@ -192,6 +206,7 @@
             </footer>
         </div>
 	    <script src="js/projects.js"></script>
+        <script src="js/toggle_button.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init();
