--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                         <ul class="interests">
                             <li>playing videogames</li>
                             <li>watching and reviewing movies</li>
-                            <li>traveling</li>
+                            <li>travelling</li>
                             <li>playing board games</li>
                             <li>reading</li>
                             <li>listening to music</li>
@@ -94,7 +94,7 @@
                         </ul>
                     </section>
                     <section class="language-grid-item" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="900">
-                        <h2>Language proficency</h2>
+                        <h2>Language proficiency</h2>
                         <ul class="language">
                             <li>English - fluent</li>
                             <li>French - conversational</li>
